<resources>
    <string name="app_name">1元云购</string>
    <string name="action_settings">Settings</string>
    <string name="please_input_username">请输入您的手机号/邮箱</string>
    <string name="pay_title">请选择支付方式</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail">获取access token失败，原因%s</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail">获取prepayid失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="et_input_money">请输入支付金额</string>
    <string name="et_input_order_des">订单描述如：精品玩具</string>
    <string name="submit_pay">提交支付</string>
    <string name="versions_check_ok">你的版本支持支付</string>
    <string name="versions_check_no">你的版本不支持支付</string>
    <string name="select_pay_type">你选择了</string>
    <string name="click_bt_submit">，点击按钮进行支付</string>
    <string name="greater_one">金额必须大于1分钱</string>
    <string name="no_token_id">订单号异常</string>
    <string name="new_token">或生成一个新的测试订单号</string>
    <string name="buy">去财付通支付</string>
    <string name="loading">正在加载…</string>
    <string name="order_query">订单查询</string>
    <string name="order_id">请输入订单号查询</string>
    <string name="action_pay">付款</string>
    <string name="action_stream">流水</string>
    <string name="action_count">统计</string>
    <string name="action_share">分享</string>
    <string name="getting_all_access">正在获取全部订单...</string>
    <string name="pay_result_callback_msg">微信支付结果：%s</string>
    <string name="order_success">支付成功</string>
    <string name="action_cancel">你取消了支付</string>
    <string name="action_sourch_null">查询不到订单</string>
    <string name="wft_title">威富通统一收银台</string>
    <string name="dialog_title_prompt">温馨提示</string>
    <string name="pay_success_prompt">支付成功</string>
    <string name="pay_rcode_info">请使用手Q扫一扫</string>
    <string name="pay_zfb_rcode_info">请使用支付宝钱包扫一扫</string>
    <string name="pay_unFinished">交易未完成，您确定要返回吗？</string>
    <string name="pay_str_btnOk">确定</string>
    <string name="pay_str_txtCancel">取消</string>
    <string name="pay_wx_state_info">请使用微信扫一扫完成支付</string>
    <string name="pay_zfb_scan_state_info">扫描成功,请在手机确认支付</string>
    <string name="pay_zfb_order_no">支付宝单号</string>
    <string name="pay_qq_order_no">手 Q 单 号</string>
    <string name="pay_spay_info">SPay收款</string>
    <string name="pay_title_zfb">支付宝钱包支付</string>
    <string name="pay_title_qq">手机QQ支付</string>
    <string name="st_pay_info">兴业银行股份有限公司</string>
    <string name="st_pay_info_dg">东莞市银联通莞电子收款机租赁服务股份有限公司</string>
    <string name="st_pay_tel_dg">客服：0769-22493580</string>
    <string name="st_pay_tel_cib">客服：400-963-9163</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm">确定</string>
    <string name="test">测试</string>
    <string name="tips_exit_app">再按一次退出程序</string>
    <string name="go_shopping">立即1元云购</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="reload">重新获取</string>
    <string name="no_network_check">获取数据失败，请检查网络</string>
    <string name="no_network">获取数据失败，请检查网络，点击屏幕重新加载</string>
    <string name="no_network_click">获取数据失败，请点击重新加载</string>
    <string name="no_record">暂无记录</string>
    <string name="no_record_nearly">近期无记录</string>
    <string name="no_record_to_look_more">请使用电脑访问www.1yyg.com查看更多</string>
    <string name="no_record_for_time">最近%s无记录</string>
    <string name="tips_confirm_delete">确认删除？</string>
    <string name="tips_confirm_delete_all">确认删除全部？</string>
    <string name="retry">重试</string>
    <string name="share_subject">分享一元云购</string>
    <string name="share_goods_content">只要1块钱就可能得到哦！http://www.1yyg.com</string>
    <string name="share_shaidan_prev_content">他居然能在1元云购获得</string>
    <string name="share_shaidan_next_content">，各种羡慕嫉妒恨啊！</string>
    <string name="share_fail">分享内容加载失败，请重试</string>
    <string name="click_to_get_more">点击获取更多</string>
    <string name="get_more_ing">正在获取...</string>
    <string name="submit_ing">正在提交...</string>
    <string name="query_ing">正在查询...</string>
    <string name="send_ing">正在发送...</string>
    <string name="login_ing">正在登录...</string>
    <string name="complete">完成</string>
    <string name="submit">确认</string>
    <string name="reselect">重选</string>
    <string name="cancel">取消</string>
    <string name="clean">清除</string>
    <string name="un_install_weichat">请先安装微信客户端</string>
    <string name="un_support_openapi">当前微信客户端不支持开放平台，请先升级</string>
    <string name="wx_regiest_fail">向微信客户端注册APP失败，请重试</string>
    <string name="msg_loading_submiting">正在提交...</string>
    <string name="msg_wait_for_submiting">正在提交，请稍等...</string>
    <string name="msg_submit_success">提交成功</string>
    <string name="msg_submit_fail">提交失败</string>
    <string name="msg_link_net_fail">网络连接失败</string>
    <string name="msg_loading_uncompleted">数据尚未加载完成，请稍等</string>
    <string name="package_added">安装了 :</string>
    <string name="package_removed">卸载了 :</string>
    <string name="code_rno">幸运云购码:</string>
    <string name="the_person_time">人次</string>
    <string name="the_period_start">(第</string>
    <string name="the_period_end">云)</string>
    <string name="the_person_time_surplus_start">剩余</string>
    <string name="the_person_time_surplus_end">人次</string>
    <string name="the_person_time_and">人次/</string>
    <string name="yuan">元</string>
    <string name="tips_delete_success">删除成功</string>
    <string name="date_today">今天</string>
    <string name="date_yesterday">昨天</string>
    <string name="date_pm">下午</string>
    <string name="date_am">上午</string>
    <string name="no_more_date">没有更多数据了</string>
    <string name="stop_selling">已结束</string>
    <string name="has_stop_selling">已结束</string>
    <string name="has_stop_jioning">已满员</string>
    <string name="type">类别</string>
    <string name="html_load_error">网页加载异常，请重新加载！</string>
    <string name="service_connect_fail">无法连接到服务器</string>
    <string name="msg_cannot_pick">无法调用系统相册选取照片，请确定该服务可用</string>
    <string name="tips_buy_num_is_max">参与人次已达到上限</string>
    <string name="tips_join_shop_is_max">您参与的人次已达上限</string>
    <string name="limit_shopiing">限购</string>
    <string name="tips_limit_times">限购@limit人次</string>
    <string name="tips_get_auth_error">获取授权码失败</string>
    <string name="end_app">退出</string>
    <string name="upgrade_tips">版本更新提示</string>
    <string name="load_fail">加载失败</string>
    <string name="code_input_error">验证码错误，请重新输入</string>
    <string name="tips_input_verifycode">请输入验证码</string>
    <string name="str_download_app">正在下载...</string>
    <string name="str_wait_for_downloading">正在下载，请稍等...</string>
    <string name="str_download_error">抱歉！下载失败，请重试！</string>
    <string name="str_download_install">应用下载完成，点击安装吧</string>
    <string name="str_download_over">下载完成</string>
    <string name="filesize">大小：</string>
    <string name="new_version_file">有新版本啦，请升级！</string>
    <string name="sdcard_error">SD卡不可用！</string>
    <string name="update_fail">更新失败！</string>
    <string name="update_unnecessary">已是最新版本</string>
    <string name="upgrade">升级</string>
    <string name="tips_not_pointout_later">以后不再提示</string>
    <string name="str_download_apk_existed">安装文件已存在</string>
    <string name="str_download_re_download">重新下载</string>
    <string name="str_download_install_now">直接安装</string>
    <string name="today_timed_shopping">今日限时</string>
    <string name="timed_newest">每天10点、15点、22点揭晓</string>
    <string name="tomorrow_announce">明日限时</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="particioated_num">已参与</string>
    <string name="total_num">总需人次</string>
    <string name="surplus_num">剩余</string>
    <string name="recommend_progress_message">正在加载...</string>
    <string name="remind_off">设置提醒</string>
    <string name="remind_on">取消提醒</string>
    <string name="nav01">新品</string>
    <string name="nav02">晒单</string>
    <string name="nav03">地图模式</string>
    <string name="nav04">充值</string>
    <string name="today_announce">今日限时</string>
    <string name="tomorrow_timed_shopping">明日限时</string>
    <string name="time_10">10点</string>
    <string name="time_13">13点</string>
    <string name="time_15">15点</string>
    <string name="time_21">21点</string>
    <string name="time_23">23点</string>
    <string name="timed_announce_rule">限时揭晓规则</string>
    <string name="rule1">所有限时揭晓商品，不管已参与人次是否达到总需参与人次，都按截止时间准时揭晓。</string>
    <string name="rule2">如果计算出的云购码未被购买，则取差值最小的云购码作为幸运云购码。</string>
    <string name="rule3">如果有2个云购码最小差值相等，则取大值作为最终幸运云购码。</string>
    <string name="rule4">限时揭晓商品不参与差价送福分活动且晒单不可再获得1000福分奖励。</string>
    <string name="rule5">限时揭晓的幸运云购码计算方式：</string>
    <string name="rule5_1">取该商品最后购买时间前网站所有商品的最后100条购买时间记录 。</string>
    <string name="rule5_2">每个时间记录按时、分、秒、毫秒依次排列取数值。</string>
    <string name="rule5_3">将这100个数值之和除以该商品总参与人次后取余数，余数加上10000001 即为“幸运云购码”。</string>
    <string name="rule5_4">限时揭晓的商品如果计算出的云购码未被购买，则取差值最小的云购码作为幸运云购码。如果有2个云购码最小差值相等，则取大值作为最终幸运云购码。</string>
    <string name="the_price">价值:￥</string>
    <string name="announce">即将揭晓</string>
    <string name="popular">人气</string>
    <string name="price">价值</string>
    <string name="newest">最新</string>
    <string name="goods_whole">所有商品</string>
    <string name="goods_phone">手机</string>
    <string name="goods_camera">数码相机</string>
    <string name="goods_pc">电脑</string>
    <string name="goods_ppc">平板电脑</string>
    <string name="goods_jewelry">钟表首饰</string>
    <string name="goods_other">其他商品</string>
    <string name="announced_the_countdown">揭晓倒计时</string>
    <string name="all_shopping_record">所有参与记录</string>
    <string name="picture_text_detail">图文详情</string>
    <string name="picture_text_detail_describe">（建议WIFI下使用）</string>
    <string name="sack">啊哦！被抢光啦！</string>
    <string name="over">已揭晓！</string>
    <string name="time_limit">限时</string>
    <string name="jiexiao">揭晓</string>
    <string name="daojishi">倒计时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="millisecond">毫秒</string>
    <string name="tips_calculator">表着急！计算机正在努力计算...</string>
    <string name="total_shopping">本云参与</string>
    <string name="per_times">人次</string>
    <string name="announced_time">揭晓时间：</string>
    <string name="shopping_time">云购时间</string>
    <string name="shopping_code">幸运云购码：</string>
    <string name="check_calculator_process">计算详情</string>
    <string name="check_all_shaidan">查看所有晒单分享</string>
    <string name="check_detail">查看详情</string>
    <string name="time_announced_goods">限时揭晓商品</string>
    <string name="detail_1">已有</string>
    <string name="set_default_addr">设为默认地址</string>
    <string name="hint_recipients">请输入收件人姓名</string>
    <string name="hint_tel">请输入常用联系电话，如0755-xx(选填)</string>
    <string name="hint_mobile">请输入手机号码</string>
    <string name="hint_area">请选择所在区域</string>
    <string name="hint_street">请选择所在街道</string>
    <string name="hint_detail_address">请填写详细地址</string>
    <string name="hint_zip_code">请填写邮编(非必填)</string>
    <string name="receipt_address_tips">请确保填写姓名为真实有效，否则将无法进行配送</string>
    <string name="scan_tdcode">"扫描二维码，让您的朋友
也可下载1元云购！"</string>
    <string name="copyright">"Copyright © 2011 - 2015, 版权所有 1yyg.com
粤ICP备09213115号-1"</string>
</resources>