<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_goodsdetail"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_bar_bg_white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/return_login"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/button_left_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="添加收货地址"
            android:textColor="#555555"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/bt_save_address"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="保存"
            android:textColor="@color/address_save_color_sel"
            android:textSize="17sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/name_warning"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/title_goodsdetail"
        android:background="#fdfbd9"
        android:gravity="center"
        android:text="@string/receipt_address_tips"
        android:textColor="#fd6702"
        android:textSize="13sp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_address_name"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/name_warning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_address_shape"
        android:hint="@string/hint_recipients"
        android:padding="10dp"
        android:textColor="#555555"
        android:textColorHint="#dcdcdc"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/et_address_tel"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_address_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_address_shape"
        android:hint="@string/hint_tel"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#555555"
        android:textColorHint="#dcdcdc"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/et_address_moblie"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_address_tel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_address_shape"
        android:hint="@string/hint_mobile"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#555555"
        android:textColorHint="#dcdcdc"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/et_address_area"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_address_moblie"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_address_shape"
        android:clickable="true"
        android:hint="@string/hint_area"
        android:padding="10dp"
        android:textColor="#555555"
        android:textColorHint="#dcdcdc"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/et_address_street"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_address_area"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_address_shape"
        android:hint="@string/hint_street"
        android:padding="10dp"
        android:textColor="#555555"
        android:textColorHint="#dcdcdc"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/et_address_detial"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_below="@id/et_address_street"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_address_shape"
        android:gravity="left|top"
        android:hint="@string/hint_detail_address"
        android:padding="10dp"
        android:textColor="#555555"
        android:textColorHint="#dcdcdc"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/et_address_mailcode"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_address_detial"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_address_shape"
        android:hint="@string/hint_zip_code"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#555555"
        android:textColorHint="#dcdcdc"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/cb_address_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_address_mailcode"
        android:layout_alignStart="@id/et_address_mailcode"
        android:layout_below="@id/et_address_mailcode"
        android:layout_marginTop="8dp"
        android:text="@string/set_default_addr"
        android:textColor="#989898"/>
</RelativeLayout>
