<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/setting_background">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_bar_bg_white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/return_about_us"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/button_left_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="关于我们"
            android:textColor="#555555"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_bar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_xlarge"
                android:layout_marginLeft="@dimen/frame_margin_horizontal"
                android:layout_marginRight="@dimen/frame_margin_horizontal"
                android:layout_marginTop="@dimen/padding_xlarge"
                android:background="@drawable/layout_radius_all_white_stroke_gray"
                android:orientation="vertical"
                android:padding="20.0dip">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30.0dip"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/about_logo"/>

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5.0dip"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/bodyfont_13"/>

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/iv_tdcode"
                    android:layout_width="180.0dip"
                    android:layout_height="180.0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30.0dip"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    fresco:actualImageScaleType="focusCrop"
                    android:background="@drawable/goods_pic_default"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/scan_tdcode"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/bodyfont_13"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginTop="50.0dip"
                    android:background="@drawable/line_dotted"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20.0dip"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/copyright"
                    android:textColor="@color/declare_text"
                    android:textSize="@dimen/bodyfont"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>